test/libsolidity/syntaxTests/pragma/experimental_multiple_experimental.sol
pragma experimental experimental __test;
// ====
// experimental: true
// ----
// SyntaxError 6022: (0-40): Stray arguments.

